[project]
name = "llm-tools-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Dan Turkel", email = "daturkel@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "llm==0.26a0",
    "sqlite-utils>=3.38",
]

[project.entry-points.llm]
llm_tools_rag = "llm_tools_rag"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
