[project]
name = "llm-tools-rag"
version = "0.1.0"
description = "Advanced RAG (Retrieval-Augmented Generation) plugin for LLM with hybrid search"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "c0ffee0wl"}]
requires-python = ">=3.10"
dependencies = [
    "llm>=0.17",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "nltk>=3.8",
    "flashrank>=0.2.0",
]

[project.entry-points.llm]
rag = "llm_tools_rag"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_tools_rag*"]
